--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ node_modules/
 **/**/node_modules
 **/**/**/node_modules
 **/**/**/**/node_modules
+
+
+.env
+**/.env
+**/**/.env
+**/**/**/.env
+**/**/**/**/.env
